# smart-thermostat

./: .gitignore  Armbian-NanoPI_Neo_Air-V1.txt  Block Diagram.drawio  GettingStarted.md  InitialSetup.md  README.md  am2321
.unotes/: unotes_meta.json
app/: .gitignore  CMakeLists.txt  GettingStarted.md  measure-heap.sh  platformio.ini  sdkconfig.esp32-s3-devkitc-1  sdkconfig.esp32s3  smart-thermostat.code-workspace  tests.txt
app/src/ui/: CMakeLists.txt  filelist.txt  fonts.h  page.cpp  thermostat.cpp  ui.c  ui.cpp  ui.h  ui_events.c  ui_events.cpp  ui_events.h  ui_helpers.c  ui_helpers.h  widgets.cpp
app/src/ui/assets/: fa_672_icons_28.c  fa_672_icons_36.c  heat_cool.c  materialdesign_24.c  materialdesign_28.c  materialdesign_32.c  roboto_semicond_medium_148_num.c  roboto_semicond_medium_num_148.c  roboto_semicond_medium_num_72.c
app/src/ui/components/: ui_comp_hook.c
app/src/ui/screens/: hold_settings.cpp  hvac_quick_settings.cpp  main_page_absent.cpp  main_page_present.cpp  menu.cpp  menu_info.cpp  menu_internal.h  menu_network.cpp  menu_network_matter.cpp  menu_setup.cpp  menu_setup_calibrate.cpp  menu_struct.c  ui_DeviceName.c  ui_Info.c  ui_LessCommonSetup.c  ui_MainScreen.c  ui_MatterConfig.c  ui_MqttConfig.c  ui_Screen1.c  ui_Setup.c  ui_ThermostatRestart.c  ui_WifiConfig.c
assets/: README.md  thermo-housing-back.stp  thermo-housing-front.stp
esphome/: .gitignore  README.md  device-v0.5.2.yaml  requirements.txt  sample.yaml
pcb/: FabConvert.com_thermostat v0.6.0.stl  NanoPi_NEO_Air-V1.1-1708.dxf  Thermostat (Before routing).kicad_pcb  fp-info-cache  (+12 more)
(+92 files in other folders)
